--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "reactjs-popup": "^2.0.4"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
